[tool.poetry]
name = "example-project"
version = "0.1.0"
description = "An example Python project."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "example_project" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.6.4"
fastapi = "^0.110.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
mypy = "^1.10.0"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
